--- a/res/css/theme.css
+++ b/res/css/theme.css
@@ -54,8 +54,6 @@ body {
 }
 
 #nav  {
-
-  font-weight: 400;
   font-size: 2rem;
 }
 
@@ -64,6 +62,11 @@ body {
   font-size: 1rem;
 }
 
+h4 h5 h6 {
+  font-weight: 300;
+  font-family: Roboto,sans-serif;
+
+}
 
 h2 {
   font-weight: 300;
