--- a/res/templates/design_form.html
+++ b/res/templates/design_form.html
@@ -1,5 +1,5 @@
 <h2>Input PDB File and Parameters</h2>
-<form method='post' class="form-horizontal" action='design_primers' onsubmit="return FormValidation();"
+<form method='post' class="form-horizontal" action='design_scaffold' onsubmit="return FormValidation();"
       enctype="multipart/form-data">
   <!-- file upload -->
   <div class="input-group" id="design-form">
@@ -22,13 +22,13 @@
     </div>
     <div class="form-group col-lg-4">
       <label for="nstructs "># Designs</label>
-      <input type="text " class="form-control " name="nstructs" id="nstructs" placeholder="10 ">
+      <input type="text " class="form-control " name="nstruct" id="nstruct" placeholder="10 ">
     </div>
   </div>
   <div class="form-row">
     <div class="form-group col-lg-12">
       <label for="inputEmail4">Email</label>
-      <input type="text" class="form-control" name="email" id="email" placeholder="Optional" style="width:85%">
+      <input type="text" class="form-control" name="email" id="email" placeholder="Optional (To recieve email when job is done)" style="width:85%">
     </div>
   </div>
   <div class="form-row">
