first release test

--- a/res/templates/index.html
+++ b/res/templates/index.html
@@ -28,7 +28,9 @@
         <img class="card-img-top" src="/res/images/scaffold.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">3D RNA Scaffolding</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">
+            Use RNAMake to build a 3D scaffold to hold a tertiary contact or RNA segment of interest
+            in a specific orientation. </p>
           <a href="/design_scaffold_app" class="btn btn-primary">Launch App</a>
         </div>
       </div>
@@ -40,8 +42,10 @@
         <img class="card-img-top" src="/res/images/aptamer_stablization.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Aptamer Stablization</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Launch App</a>
+          <p class="card-text">
+            Use RNAMake to build a 3D scaffold to hold a tertiary contact or RNA segment of interest
+            in a specific orientation.</p>
+          <a href="/apt_stablization_app" class="btn btn-primary">Launch App</a>
         </div>
       </div>
     </div>
