--- a/res/templates/apt_stablization.html
+++ b/res/templates/apt_stablization.html
@@ -4,7 +4,7 @@
 
 <!-- css and js for design_form --->
 <link href="/res/css/design_form.css" rel="stylesheet">
-<script src="/res/js/design_form.js"></script>
+<script src="/res/js/stablization_form.js"></script>
 
 </head>
 <body>
@@ -22,7 +22,7 @@
     <div class="col-lg-5">
       <br />
       <br />
-      <h2>Generating 3D RNA Scaffolds</h2>
+      <h2>Atpamer Stablization with 3D Design</h2>
       <p class="lead"> RNAMake leverages an extensive motif library and pathfinding
          algorithms to automate the assembly of RNA 3D motifs in design. Specifically, RNAMake is capable of
          generating RNA segments in 3D composed of continuous chains of RNA motifs that that twist and translate
@@ -31,7 +31,7 @@
         <button type="submit" class="btn btn-primary "> Submit </button>
      </div>
      <div class="col-lg-7">
-       <img src="/res/images/scaffold.png" width="100%">
+       <img src="/res/images/aptamer_stablization.png" width="100%">
      </div>
   </div>
 
@@ -41,11 +41,9 @@
   <div class="row">
     <div class="col-lg-5">
       <h2>What to submit?</h2>
-      <p class="lead">Submission requires a PDB containing RNA that has at least 2 basepair ends. An example structure is
-        shown on the right. This pdb which you can download <a href='/download?f_path=data/0f1d384952e7a06bd86764d15777dd3f/scaffold.pdb'>here</a>, contains 3 basepair ends. Two are labeled
-        by their "name". This name tells the webserver the start and end of a submitted structure. The basepair name of the
-        name of the two residues contained in it in the format chain id appended to its residue number. In the case of A141-A162
-        that declares that there is a basepair between residue 141 on chain A to residue 161 also on chain A.
+      <p class="lead">Fulfilled direction use continual set him propriety continued. Saw met applauded favourite
+        deficient engrossed concealed and her. Concluded boy perpetual old supposing. Farther related bed and passage
+         comfort civilly. Dashwoods see frankness objection abilities the. As hastened oh produced prospect formerly.
       </p>
     </div>
     <div class="col-lg-7">
@@ -60,7 +58,7 @@
   <div class="row">
     <br />
     <div class="col-lg-6">
-      {% include '/res/templates/design_form.html' %}
+      {% include '/res/templates/stablization_form.html' %}
     </div>
   </div>
 </div>
