--- a/res/templates/design_form.html
+++ b/res/templates/design_form.html
@@ -1,4 +1,4 @@
-<h2>Input PDB File and Parameters</h2>
+<h2>Submit your RNA 3D Scaffold Job!</h2>
 <form method='post' class="form-horizontal" action='design_scaffold' onsubmit="return FormValidation();"
       enctype="multipart/form-data">
   <!-- file upload -->
@@ -33,7 +33,9 @@
   </div>
   <div class="form-row">
     <div class="form-group col-lg-12">
-      <button type="submit" class="btn btn-primary ">Submit</button>
+      <button role="button" type="Submit" class="btn btn-primary">Submit</button>
+      <a class="btn btn-secondary" href="/result/0f1d384952e7a06bd86764d15777dd3f" role="button">Example Results</a>
+
       <!-- <a href="/example_uucg " id="btn_demo " class="btn btn-warning " data-toggle="tooltip " data-placement="bottom " title=" " data-original-title="Example of RNA Redesign using a UUCG tetraloop. ">&nbsp;&nbsp;Demo&nbsp;&nbsp;</a>
       -->
     </div>
