updated links for production

--- a/res/templates/index.html
+++ b/res/templates/index.html
@@ -17,34 +17,28 @@
 
 <div class="container">
   <br />
-
   {% include '/res/templates/jumbotron.html' %}
 
   <h2>Web Applications</h2>
 
   <div class="row">
-    <div class="col-sm-4">
-      <div class="card" style="width: 20rem;">
+    <div class="card-deck">
+      <div class="card border-secondary" style="width: 20rem;">
         <img class="card-img-top" src="/res/images/scaffold.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">3D RNA Scaffolding</h5>
           <p class="card-text">
-            Use RNAMake to build a 3D scaffold to hold a tertiary contact or RNA segment of interest
-            in a specific orientation. </p>
+            Use RNAMake to build a 3D scaffold to hold a tertiary contact or RNA segment of interest in a specific orientation. </p>
           <a href="/design_scaffold_app" class="btn btn-primary">Launch App</a>
         </div>
       </div>
-    </div>
 
-
-    <div class="col-sm-4">
-      <div class="card" style="width: 20rem;">
+      <div class="card border-secondary" style="width: 20rem;">
         <img class="card-img-top" src="/res/images/aptamer_stablization.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Aptamer Stablization</h5>
           <p class="card-text">
-            Use RNAMake to build a 3D scaffold to hold a tertiary contact or RNA segment of interest
-            in a specific orientation.</p>
+            Use RNAMake to build a 3D scaffold to hold a tertiary contact or RNA segment of interest in a specific orientation.</p>
           <a href="/apt_stablization_app" class="btn btn-primary">Launch App</a>
         </div>
       </div>
