--- a/res/templates/nav.html
+++ b/res/templates/nav.html
@@ -14,8 +14,8 @@
         Applications
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="/design_scaffold">3D RNA Scaffolding</a>
-        <a class="dropdown-item" href="#">Aptamer Stablization</a>
+        <a class="dropdown-item" href="/design_scaffold_app">3D RNA Scaffolding</a>
+        <a class="dropdown-item" href="/apt_stablization_app">Aptamer Stablization</a>
       </div>
     </li>
     <li class="nav-item {% if active == 'About' %}active{% endif %}">
