minor style changes for about page

--- a/res/templates/about.html
+++ b/res/templates/about.html
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <h3>How does RNAMake generate new RNA segments? </h3>
+        <h4>How does RNAMake generate new RNA segments? </h4>
         <p class="large">RNAMake leverages an extensive motif library and pathfinding
            algorithms to automate the assembly of RNA 3D motifs in design. Specifically, RNAMake is capable of
            generating RNA segments in 3D composed of continuous chains of RNA motifs that that twist and translate
@@ -30,12 +30,16 @@
     <hr>
     <div class="row">
       <div class="col-md-4">
-        <h3> What problems can RNAMake solve on this webserver? </h3>
+        <h4> What problems can RNAMake solve on this webserver? </h4>
         <p class="large">RNAMake can solve two distinct types of 3D design problems this server </p>
       </div>
       <div class="col-md-1">
       </div>
       <div class="col-md-7">
+        <center><h4>Scaffold Design</h4></center>
+        <img src="/res/images/scaffold.png" width="100%" />
+        <center><h4>Aptamer Stablization</h4></center>
+        <img src="/res/images/aptamer_stablization.png" width="100%" />
       </div>
     </div>
   </div>
