finishing apt_stablization tests

--- a/res/templates/stablization_form.html
+++ b/res/templates/stablization_form.html
@@ -26,7 +26,7 @@
   </div>
   <div class="form-row">
     <div class="form-group col-lg-12">
-      <button role="button" type="Submit" class="btn btn-primary">Submit</button>
+      <button role="button" type="Submit" class="btn btn-primary" id="submit_button">Submit</button>
       <a class="btn btn-secondary" href="/result/0f1d384952e7a06bd86764d15777dd3f" role="button">Example Results</a>
 
       <!-- <a href="/example_uucg " id="btn_demo " class="btn btn-warning " data-toggle="tooltip " data-placement="bottom " title=" " data-original-title="Example of RNA Redesign using a UUCG tetraloop. ">&nbsp;&nbsp;Demo&nbsp;&nbsp;</a>
