added some polish and fixed setting up job queue

--- a/res/templates/about.html
+++ b/res/templates/about.html
@@ -14,7 +14,7 @@
   <br />
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-5">
         <h4>How does RNAMake generate new RNA segments? </h4>
         <p class="large">RNAMake leverages an extensive motif library and pathfinding
            algorithms to automate the assembly of RNA 3D motifs in design. Specifically, RNAMake is capable of
@@ -23,24 +23,34 @@
       </div>
       <div class="col-md-1">
       </div>
-      <div class="col-md-7">
+      <div class="col-md-6">
         <img src="/res/images/assembly.png" width="100%"/>
       </div>
     </div>
     <hr>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-5">
         <h4> What problems can RNAMake solve on this webserver? </h4>
-        <p class="large">RNAMake can solve two distinct types of 3D design problems this server </p>
+        <p class="large">RNAMake can solve two distinct types of 3D design problems this server. First,
+          generating a 3D scaffold to hold a tertiary contact or RNA segment of interest in a specific orientation.
+          Design of a 3D scaffold can be done at <a href="/design_scaffold_app">here</a>. Second, RNAMake can stablize a
+          small-molecule binding aptamer through generation of peripheral tertiary contacts that extend out of
+          either end of an aptamer and encircle these aptamers, bracing them into their functional 3D arrangements.
+          Generationg stablized aptamers can be done <a href="/apt_stablization_app">here</a>.</p>
       </div>
       <div class="col-md-1">
       </div>
-      <div class="col-md-7">
+      <div class="col-md-6">
         <center><h4>Scaffold Design</h4></center>
         <img src="/res/images/scaffold.png" width="100%" />
         <center><h4>Aptamer Stablization</h4></center>
         <img src="/res/images/aptamer_stablization.png" width="100%" />
       </div>
+    </div>
+    <hr>
+    <div class="row">
+        <h4>Having issues or have questions?</h4>
+        <p class="large">Feel free email Joseph Yesselman (jyesslem@stanford.edu) the main developer of RNAMake.</p>
     </div>
   </div>
 
