--- a/res/templates/index.html
+++ b/res/templates/index.html
@@ -38,7 +38,7 @@
         <div class="card-body">
           <h5 class="card-title">Aptamer Stablization</h5>
           <p class="card-text">
-            Use RNAMake to build a 3D scaffold to hold a tertiary contact or RNA segment of interest in a specific orientation.</p>
+            Use RNAMake to stablize a small-molecule binding aptamer through generation of peripheral tertiary contacts.</p>
           <a href="/apt_stablization_app" class="btn btn-primary" id="stablization_button">Launch App</a>
         </div>
       </div>
