--- a/res/templates/required_files.html
+++ b/res/templates/required_files.html
@@ -1,5 +1,5 @@
 <link rel="shortcut icon" href="/images/EteRNA_shortcut.png">
-<title>RNA Redesign</title>
+<title>RNAMake Server</title>
 
 <!-- Bootstrap core CSS -->
 <link href="/res/css/bootstrap.min.css" rel="stylesheet">
