--- a/res/templates/results.html
+++ b/res/templates/results.html
@@ -61,7 +61,8 @@
     {{job_info.job_info(j)}}
 
     <hr />
-    <h2>Job Results: </h2>
+    <h2>Job Results: <a href="/download/?f_path=data/{{j.id}}/all.zip" class="btn btn-primary" >Download</a>
+</h2>
 
     <div class="row">
       <div class="col-lg-4">
